sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: ')' expected but ';' found.
		if (plusPetit(posGnome-1;posGnome+1)){
                                        ^AlgGnomeSort:9: error: ';' expected but ')' found.
		if (plusPetit(posGnome-1;posGnome+1)){
                                                   ^